--- a/about-copy.html
+++ b/about-copy.html
@@ -1,6 +1,6 @@
 ---
-title: About
-description: We've built an amazing team of developers, marketers, designers and sales people.
+title: Doubt
+description: We've built an amazing team of doubters, moaners, whingers and whiners.
 image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 ---
 
@@ -8,7 +8,7 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<h1 class="editable">Our Story</h1>
-			<p class="subtext editable">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
+			<p class="subtext editable">We have an extremely talented team whose sole goal is to bring you down.</p>
 		</div>
 	</div>
 </section>
