Updated '_drafts/tikti.html' via CloudCannon

--- a/_drafts/tikti.html
+++ b/_drafts/tikti.html
@@ -1,8 +1,11 @@
 ---
 title: tikti
-date:
-description:
+date: 2016-12-09 00:00:00
+description: Where all the tik is kti
 categories:
+  - health
+  - friendship
+  - science
 image:
-author_staff_member:
+author_staff_member: gerald
 ---
