--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ bottom_image: https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png
 
 <div class="content">
     <section>
-    {% for post in site.categories.Latest %}
+     <div class="container flex">
+      {% for post in site.categories.Latest %}
       <li class="blog-post">
 	     	<h2><a href="{% include relative-src.html src=post.url %}">{{ post.title }}</a></h2>
 	        {% include post-title.html post=post %}
@@ -27,7 +28,8 @@ bottom_image: https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png
 			  <div class="button"><a href="{% include relative-src.html src=post.url %}">Read More</a></div>
 		    </div>
 	  </li>
-    {% endfor %}
+     {% endfor %}
+     </div>
     </section>
 	<section class="info" id="learn-more">
 		<div class="container flex">
