--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ bottom_image: https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png
 </section>
 
 <div class="content">
-    <section>
+    <section class="info">
      <div class="container flex">
       {% for post in site.categories.Latest %}
       <li class="blog-post">
