--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ bottom_image: https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png
 <div class="content">
     <section class="info">
      <div class="container flex">
-      {% for post in site.categories.Latest %}
+      {% for post in site.categories.latest %}
       <li class="blog-post">
 	     	<h2><a href="{% include relative-src.html src=post.url %}">{{ post.title }}</a></h2>
 	        {% include post-title.html post=post %}
