--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ bottom_image: https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png
     <ul class="staff">
     {% for post in site.categories.latest %}
       <li>
-        <div class="square-image" style="background-image: url({{ post.image }})"></div>
+        <div class="square-image" style="background-image: url({{ post.fp-image }})"></div>
 	<h3>{{ post.title }}</h3>
 	<div class="button"><a href="{% include relative-src.html src=post.url %}">Read More</a></div>
       </li>
