Updated 'ri.html' via CloudCannon

--- a/ri.html
+++ b/ri.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
+---
+title: Responsive Images
+description: The best responsive Images Solution Yet
+image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
+---
 
-<html lang="en">
-	<head>
-		<meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<style>
-			ul li {display: inline-block; max-width:33vmax}
-		</style>
-    </head>
-<body>
+<style>
+	ul li {display: inline-block; max-width:33vmax}
+</style>
 <ul class="3-wide">
 	<li><img src="https://res.cloudinary.com/maxgoldhouse/image/upload/w_auto/1390/9i.jpg" sizes="10vw" alt=""></li>
 	<li><img src="https://res.cloudinary.com/maxgoldhouse/image/upload/w_auto/1390/9i.jpg?2" sizes="15vw" alt=""></li>
@@ -17,5 +14,3 @@
 </ul>
 <h2>100% Wide</h2>
 <div><img src="https://res.cloudinary.com/maxgoldhouse/image/upload/w_auto/1390/9i.jpg?4" sizes="(min-width:200px) 90vw" alt=""></div>
-</body>
-</html>
