--- a/ri.html
+++ b/ri.html
@@ -8,10 +8,12 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 	ul li {display: inline-block; max-width:33vmax}
 	.3-wide{margin-top: 200px;}
 </style>
-<ul class="3-wide">
+<div  class="3-wide">
+<ul>
 	<li><img src="https://res.cloudinary.com/maxgoldhouse/image/upload/w_auto/1390/9i.jpg" sizes="10vw" alt=""></li>
 	<li><img src="https://res.cloudinary.com/maxgoldhouse/image/upload/w_auto/1390/9i.jpg?2" sizes="15vw" alt=""></li>
 	<li><img src="https://res.cloudinary.com/maxgoldhouse/image/upload/w_auto/1390/9i.jpg?3" sizes="25vw" alt=""></li>
 </ul>
+</div>
 <h2>100% Wide</h2>
 <div><img src="https://res.cloudinary.com/maxgoldhouse/image/upload/w_auto/1390/9i.jpg?4" sizes="(min-width:200px) 90vw" alt=""></div>
