Updated 'ri.html' via CloudCannon

--- a/ri.html
+++ b/ri.html
@@ -6,9 +6,9 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 
 <style>
 	ul li {display: inline-block; max-width:33vmax}
-	.3-wide{margin-top: 200px;}
+	.3wide{padding-top: 200px;}
 </style>
-<div  class="3-wide">
+<div  class="3wide">
 <ul>
 	<li><img src="https://res.cloudinary.com/maxgoldhouse/image/upload/w_auto/1390/9i.jpg" sizes="10vw" alt=""></li>
 	<li><img src="https://res.cloudinary.com/maxgoldhouse/image/upload/w_auto/1390/9i.jpg?2" sizes="15vw" alt=""></li>
