Updated 'ri.html' via CloudCannon

--- a/ri.html
+++ b/ri.html
@@ -5,7 +5,7 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 ---
 
 <style>
-    #topbox{margin-top: 100px;}
+    #topbox{padding-top: 100px;}
 	ul li{display: inline-block; max-width:33vmax}
 </style>
 <div  id="topbox">
