Updated 'ri.html' via CloudCannon

--- a/ri.html
+++ b/ri.html
@@ -5,10 +5,10 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 ---
 
 <style>
-    #topbox{padding-top: 100px;}
+    #threebox{padding-top: 100px;}
 	ul li{display: inline-block; max-width:33vmax}
 </style>
-<div  id="topbox">
+<div  id="threebox">
 <ul>
 	<li><img src="https://res.cloudinary.com/maxgoldhouse/image/upload/w_auto/1390/9i.jpg" sizes="10vw" alt=""></li>
 	<li><img src="https://res.cloudinary.com/maxgoldhouse/image/upload/w_auto/1390/9i.jpg?2" sizes="20vw" alt=""></li>
