--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Home
+title: The Home of Digital Marketing
 description: The latest app to help you find new friends with common interests.
 image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
 bottom_image: https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png
