--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 	</div>
 </section>
 
-<section class="pad">
+<section class="pad editable">
 	<div class="text-container contact-box">
 		<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
 			<input type="hidden" name="_to" value="support@cloudcannon.com">
