Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: The Home of Digital Marketing
 description: The latest app to help you find new friends with common interests.
-image: 'http://investessex.co.uk/images/global/home-hero.jpg'
+image: //clarity-strategies.github.io/ie-uploads//uploads/homepage/officehero.jpg
 bottom_image: 'https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png'
 ---
 
