fouracross from staff in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ bottom_image: 'https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png'
 <div class="content">
 <section class="pad">
   <div class="container">
-    <ul class="staff">
+    <ul class="fouracross">
     {% for post in site.categories.latest %}
       <li>
         <div class="square-image" style="background-image: url({{ post.fp-image }})"></div>
