--- a/doubt.html
+++ b/doubt.html
@@ -16,7 +16,7 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 <section class="pad">
 	<div class="container">
 		<p class="editor-link"><a href="cloudcannon:collections/_staff_members" class="btn"><strong>&#9998;</strong> Manage Staff Members</a></p>
-		<ul class="staff">
+		<ul class="fouracross">
 			{% for person in site.staff_members %}
 				<li>
 					<div class="square-image" style="background-image: url({% include relative-src.html src=person.image_path %})"></div>
